objects/DandB_Directorship__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_Directorship</relationshipLabel>
        <relationshipName>DandB_Directorship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyNumber__c</fullName>
        <label>companyNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyStatus__c</fullName>
        <label>companyStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataSource__c</fullName>
        <label>dataSource</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateAppointedDay__c</fullName>
        <label>dateAppointedDay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateAppointedMonth__c</fullName>
        <label>dateAppointedMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateAppointedYear__c</fullName>
        <label>dateAppointedYear</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateCeasedDay__c</fullName>
        <label>dateCeasedDay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateCeasedMonth__c</fullName>
        <label>dateCeasedMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateCeasedYear__c</fullName>
        <label>dateCeasedYear</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detailsType__c</fullName>
        <label>detailsType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dunsNumber__c</fullName>
        <label>dunsNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extractDay__c</fullName>
        <label>extractDay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extractMonth__c</fullName>
        <label>extractMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extractYear__c</fullName>
        <label>extractYear</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DandB_Directorship</label>
    <nameField>
        <label>DandB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_Directorship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>